--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,105 @@
     <link href="/ocserv.png" rel="icon" type="image/svg+xml"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Ocserv user management</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            background: #111;
+            color: white;
+            font-family: Arial, sans-serif;
+        }
+
+        #preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #111;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        .loader {
+            width: 180px;
+            height: 140px;
+            display: block;
+            margin: 0 auto 20px;
+            background-image: radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0),
+            radial-gradient(circle 50px at 50px 50px, #FFF 100%, transparent 0),
+            radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0),
+            radial-gradient(circle 15px at 15px 15px, #FFF 100%, transparent 0),
+            linear-gradient(#FFF 50px, transparent 0);
+            background-size: 50px 50px,
+            100px 75px,
+            50px 50px,
+            30px 32px,
+            136px 20px;
+            background-repeat: no-repeat;
+            background-position: 0px 30px,
+            30px 0px,
+            113px 29px,
+            147px 50px,
+            23px 60px;
+            position: relative;
+            box-sizing: border-box;
+        }
+
+        .loader::after {
+            content: '';
+            position: absolute;
+            left: 2px;
+            top: 65px;
+            width: 2px;
+            height: 6px;
+            color: #FFF;
+            box-sizing: border-box;
+            animation: animloader 0.6s linear infinite;
+        }
+
+        @keyframes animloader {
+            0% {
+                box-shadow: 25px 0 white, 50px 0 white, 75px 0 white,
+                100px 0 white, 125px 0 white, 150px 0 white,
+                25px 0 white, 50px 0 white, 75px 0 white,
+                100px 0 white, 125px 0 white, 150px 0 white;
+            }
+            50% {
+                box-shadow: 25px 20px white, 50px 60px rgba(255, 255, 255, 0),
+                75px 30px rgba(255, 255, 255, 0), 100px 70px rgba(255, 255, 255, 0),
+                125px 40px white, 150px 60px rgba(255, 255, 255, 0),
+                25px 20px white, 50px 30px white,
+                75px 10px white, 100px 30px white,
+                125px 30px rgba(255, 255, 255, 0),
+                150px 30px rgba(255, 255, 255, 0);
+            }
+            100% {
+                box-shadow: 25px 60px rgba(255, 255, 255, 0), 50px 60px rgba(255, 255, 255, 0),
+                75px 50px rgba(255, 255, 255, 0), 100px 70px rgba(255, 255, 255, 0),
+                125px 70px rgba(255, 255, 255, 0), 150px 60px rgba(255, 255, 255, 0),
+                25px 80px rgba(255, 255, 255, 0), 50px 80px rgba(255, 255, 255, 0),
+                75px 70px rgba(255, 255, 255, 0), 100px 60px rgba(255, 255, 255, 0),
+                125px 30px rgba(255, 255, 255, 0), 150px 30px rgba(255, 255, 255, 0);
+            }
+        }
+
+        .loading-text {
+            font-size: 1.2rem;
+            margin-top: 10px;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+<div id="preloader">
+    <span class="loader"></span>
+    <div class="loading-text">Loading App...</div>
+</div>
+
 <div id="app"></div>
 <script src="/src/main.ts" type="module"></script>
 </body>
