complete home comp and add dummy data, some change in skeleton

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
             width: 180px;
             height: 140px;
             display: block;
-            margin: 0 auto 20px;
+            //margin: 0 auto 20px;
             background-image: radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0),
             radial-gradient(circle 50px at 50px 50px, #FFF 100%, transparent 0),
             radial-gradient(circle 25px at 25px 25px, #FFF 100%, transparent 0),
@@ -93,7 +93,7 @@
 
         .loading-text {
             font-size: 1.2rem;
-            margin-top: 10px;
+            //margin-top: 5px;
             color: white;
         }
     </style>
@@ -101,7 +101,7 @@
 <body>
 <div id="preloader">
     <span class="loader"></span>
-    <div class="loading-text">Loading App...</div>
+    <div class="loading-text">Loading ...</div>
 </div>
 
 <div id="app"></div>
